--- a/projects/ngx-ramblers/src/app/pages/admin/member-admin/member-admin.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-admin/member-admin.component.html
@@ -40,62 +40,64 @@
                   <input [disabled]="notifyTarget.busy" type="submit" value="Send Emails"
                          (click)="showSendEmailsDialog()" title="Send Emails"
                          [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
-                  <input [disabled]="notifyTarget.busy || noMailchimpListsConfigured" type="submit"
+                  <input *ngIf="config?.mailDefaults?.mailProvider=== MailProvider.MAILCHIMP"
+                         [disabled]="notifyTarget.busy || noMailchimpListsConfigured" type="submit"
                      value="Update Mailchimp Lists"
                      (click)="updateMailchimpLists()" title="Update Mailchimp Lists"
                      [ngClass]="notifyTarget.busy || noMailchimpListsConfigured ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
-                  <input [disabled]="notifyTarget.busy || noMailchimpListsConfigured" type="submit"
+                  <input *ngIf="config?.mailDefaults?.mailProvider=== MailProvider.BREVO"
+                         [disabled]="notifyTarget.busy || noMailchimpListsConfigured" type="submit"
                          value="Update Brevo Lists"
                          (click)="updateBrevoLists()" title="Update Brevo Lists"
                          [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
-            </ng-container>
+                </ng-container>
                 <ng-container>
-              <input *ngIf="!confirm.bulkDeleteOutstanding()" [disabled]="notifyTarget.busy" type="submit"
-                     [value]="'Begin Bulk Member Delete'"
-                     (click)="beginBulkMemberDelete()"
-                     [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
-              <ng-container *ngIf="confirm.bulkDeleteOutstanding()">
-                <input [disabled]="notifyTarget.busy" type="submit"
-                       [value]="'Cancel'"
-                       (click)="cancelBulkDelete()"
-                       [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab amber-confirm'">
-                <input
-                  [disabled]="notifyTarget.busy || bulkDeleteMarkedMemberIds.length === memberFilter.results.length"
-                  type="submit"
-                  [value]="'Select All ' + memberFilter.results.length + ' members'"
-                  (click)="markAllForBulkDelete()"
-                  [ngClass]="notifyTarget.busy  || bulkDeleteMarkedMemberIds.length === memberFilter.results.length? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
-                <input [disabled]="notifyTarget.busy || bulkDeleteMarkedMemberIds.length===0" type="submit"
-                       [value]="'Deselect All ' + memberFilter.results.length + ' members'"
-                       (click)="markNoneForBulkDelete()"
-                       [ngClass]="notifyTarget.busy|| bulkDeleteMarkedMemberIds.length===0 ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
-                <input [disabled]="notifyTarget.busy || bulkDeleteMarkedMemberIds.length === 0" type="submit"
-                       [value]="'Confirm Deletion of ' + bulkDeleteMarkedMemberIds.length + ' members'"
-                       (click)="confirmBulkDelete()"
-                       [ngClass]="notifyTarget.busy  || bulkDeleteMarkedMemberIds.length === 0 ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab button-confirm'">
-              </ng-container>
-            </ng-container>
-            <ng-container *ngIf="false">
-              <input [disabled]="notifyTarget.busy" type="submit"
-                     [value]="'Bulk Unsubscribe ' + memberFilter.results.length + ' members'"
-                     (click)="bulkUnsubscribe()"
-                     [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
-              <ng-container *ngIf="confirm.bulkActionOutstanding()">
-                <input [disabled]="notifyTarget.busy" type="submit"
-                       [value]="'Cancel Bulk Unsubscribe'"
-                       (click)="clearOutstandingAction()"
-                       [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab green-confirm'">
-                <input [disabled]="notifyTarget.busy" type="submit"
-                       [value]="'Confirm Bulk Unsubscribe'"
-                       (click)="confirmBulkUnsubscribe()"
-                       [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab button-confirm'">
-              </ng-container>
-            </ng-container>
-          </div>
-        </div>
-        <div *ngIf="notifyTarget.showAlert" class="row mb-0">
-          <div class="col-sm-12">
-            <div class="alert {{notifyTarget.alertClass}}">
+                  <input *ngIf="!confirm.bulkDeleteOutstanding()" [disabled]="notifyTarget.busy" type="submit"
+                         [value]="'Begin Bulk Member Delete'"
+                         (click)="beginBulkMemberDelete()"
+                         [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
+                  <ng-container *ngIf="confirm.bulkDeleteOutstanding()">
+                    <input [disabled]="notifyTarget.busy" type="submit"
+                           [value]="'Cancel'"
+                           (click)="cancelBulkDelete()"
+                           [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab amber-confirm'">
+                    <input
+                      [disabled]="notifyTarget.busy || bulkDeleteMarkedMemberIds.length === memberFilter.results.length"
+                      type="submit"
+                      [value]="'Select All ' + memberFilter.results.length + ' members'"
+                      (click)="markAllForBulkDelete()"
+                      [ngClass]="notifyTarget.busy  || bulkDeleteMarkedMemberIds.length === memberFilter.results.length? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
+                    <input [disabled]="notifyTarget.busy || bulkDeleteMarkedMemberIds.length===0" type="submit"
+                           [value]="'Deselect All ' + memberFilter.results.length + ' members'"
+                           (click)="markNoneForBulkDelete()"
+                           [ngClass]="notifyTarget.busy|| bulkDeleteMarkedMemberIds.length===0 ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
+                    <input [disabled]="notifyTarget.busy || bulkDeleteMarkedMemberIds.length === 0" type="submit"
+                           [value]="'Confirm Deletion of ' + bulkDeleteMarkedMemberIds.length + ' members'"
+                           (click)="confirmBulkDelete()"
+                           [ngClass]="notifyTarget.busy  || bulkDeleteMarkedMemberIds.length === 0 ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab button-confirm'">
+                  </ng-container>
+                </ng-container>
+                <ng-container *ngIf="false">
+                  <input [disabled]="notifyTarget.busy" type="submit"
+                         [value]="'Bulk Unsubscribe ' + memberFilter.results.length + ' members'"
+                         (click)="bulkUnsubscribe()"
+                         [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
+                  <ng-container *ngIf="confirm.bulkActionOutstanding()">
+                    <input [disabled]="notifyTarget.busy" type="submit"
+                           [value]="'Cancel Bulk Unsubscribe'"
+                           (click)="clearOutstandingAction()"
+                           [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab green-confirm'">
+                    <input [disabled]="notifyTarget.busy" type="submit"
+                           [value]="'Confirm Bulk Unsubscribe'"
+                           (click)="confirmBulkUnsubscribe()"
+                           [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab button-confirm'">
+                  </ng-container>
+                </ng-container>
+              </div>
+            </div>
+            <div *ngIf="notifyTarget.showAlert" class="row mb-0">
+              <div class="col-sm-12">
+                <div class="alert {{notifyTarget.alertClass}}">
               <fa-icon [icon]="notifyTarget.alert.icon"></fa-icon>
               <strong *ngIf="notifyTarget.alertTitle">
                 {{notifyTarget.alertTitle}}: </strong> {{notifyTarget.alertMessage}}
@@ -136,22 +138,34 @@
               <span class="sorting-header" *ngIf="showMembersColumn('socialMember')">
                 {{ memberFilter.sortDirection }}</span>
             </th>
-            <th *ngIf="mailchimpConfig?.lists?.walks" (click)="sortMembersBy('mailchimpLists.walks.subscribed')">
-              Walks emails
-              <span class="sorting-header" *ngIf="showMembersColumn('mailchimpLists.walks.subscribed')">
+            <ng-container *ngIf="config.mailDefaults.mailProvider==MailProvider.MAILCHIMP">
+              <th *ngIf="mailchimpConfig?.lists?.walks" (click)="sortMembersBy('mailchimpLists.walks.subscribed')">
+                Walks emails
+                <div class="sorting-header" *ngIf="showMembersColumn('mailchimpLists.walks.subscribed')">
+                  {{ memberFilter.sortDirection }}
+                </div>
+              </th>
+              <th *ngIf="mailchimpConfig?.lists?.socialEvents"
+                  (click)="sortMembersBy('mailchimpLists.socialEvents.subscribed')">
+                Social emails
+                <div class="sorting-header" *ngIf="showMembersColumn('mailchimpLists.socialEvents.subscribed')">
+                  {{ memberFilter.sortDirection }}
+                </div>
+              </th>
+              <th *ngIf="mailchimpConfig?.lists?.general" (click)="sortMembersBy('mailchimpLists.general.subscribed')">
+                General emails
+                <div class="sorting-header"
+                     *ngIf="showMembersColumn('mailchimpLists.general.subscribed')">{{ memberFilter.sortDirection }}
+                </div>
+              </th>
+            </ng-container>
+            <ng-container *ngIf="config.mailDefaults.mailProvider==MailProvider.BREVO">
+              <th *ngFor="let keyValue of listsAsKeyValues" (click)="sortMembersBy(keyValue.key)">
+                {{keyValue.key | titlecase}} emails
+                <span class="sorting-header" *ngIf="showMembersColumn(keyValue.key)">
                 {{ memberFilter.sortDirection }}</span>
-            </th>
-            <th *ngIf="mailchimpConfig?.lists?.socialEvents"
-                (click)="sortMembersBy('mailchimpLists.socialEvents.subscribed')">
-              Social emails
-              <span class="sorting-header" *ngIf="showMembersColumn('mailchimpLists.socialEvents.subscribed')">
-                {{ memberFilter.sortDirection }}</span>
-            </th>
-            <th *ngIf="mailchimpConfig?.lists?.general" (click)="sortMembersBy('mailchimpLists.general.subscribed')">
-              General emails
-              <span class="sorting-header"
-                    *ngIf="showMembersColumn('mailchimpLists.general.subscribed')">{{ memberFilter.sortDirection }}</span>
-            </th>
+              </th>
+            </ng-container>
             <th *ngIf="confirm.bulkDeleteOutstanding()" (click)="sortMembersBy('markedForDelete')">
               Marked For Delete<span class="sorting-header">{{ memberFilter.sortDirection }}</span></th>
           </tr>
@@ -183,15 +197,22 @@
           <td>
             <app-switch-icon [on]="member.socialMember"/>
           </td>
-          <td *ngIf="mailchimpConfig?.lists?.walks">
-            <app-switch-icon [on]="member.mailchimpLists?.walks?.subscribed"/>
-          </td>
-          <td *ngIf="mailchimpConfig?.lists?.socialEvents">
-            <app-switch-icon [on]="member.mailchimpLists?.socialEvents?.subscribed"/>
-          </td>
-          <td *ngIf="mailchimpConfig?.lists?.general">
-            <app-switch-icon [on]="member.mailchimpLists?.general?.subscribed"/>
-          </td>
+          <ng-container *ngIf="config.mailDefaults.mailProvider==MailProvider.MAILCHIMP">
+            <td *ngIf="mailchimpConfig?.lists?.walks">
+              <app-switch-icon [on]="member.mailchimpLists?.walks?.subscribed"/>
+            </td>
+            <td *ngIf="mailchimpConfig?.lists?.socialEvents">
+              <app-switch-icon [on]="member.mailchimpLists?.socialEvents?.subscribed"/>
+            </td>
+            <td *ngIf="mailchimpConfig?.lists?.general">
+              <app-switch-icon [on]="member.mailchimpLists?.general?.subscribed"/>
+            </td>
+          </ng-container>
+          <ng-container *ngIf="config.mailDefaults.mailProvider==MailProvider.BREVO">
+            <td *ngFor="let keyValue of mailListUpdaterService.mapToKeyValues(mailConfig?.lists)">
+              <app-switch-icon [on]="subscriptionFor(member, keyValue)"/>
+            </td>
+          </ng-container>
           <td class="pointer" *ngIf="confirm.bulkDeleteOutstanding()" (click)="toggleDeletionMarker(member.id)">
 
           <fa-icon *ngIf="markedForDelete(member.id)" [icon]="faUserXmark" class="member-delete"></fa-icon>
