--- a/projects/ngx-ramblers/src/app/pages/admin/system-settings/system-settings.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/system-settings/system-settings.html
@@ -262,6 +262,8 @@
         </tab>
         <tab heading="External Systems">
           <div class="img-thumbnail thumbnail-admin-edit">
+            <app-mail-provider-settings [config]="config"
+                                        (membersPendingSave)="membersPendingSave=$event"></app-mail-provider-settings>
             <div class="row img-thumbnail thumbnail-2">
               <div class="thumbnail-heading">Meetup</div>
               <div class="col-sm-12">
